<?xml version="1.0" encoding="utf-8"?>
<com.expedia.bookings.widget.PaymentWidget
    style="?attr/checkout_card_view_style"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp">

    <LinearLayout
        android:id="@+id/card_info_container"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/card_background"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <com.expedia.bookings.widget.RoundImageView
                android:id="@+id/card_info_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_checkout_default_creditcard" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="15dp">

            <com.expedia.bookings.widget.TextView
                android:id="@+id/card_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CheckoutWidgetPrimaryTextStyle" />

            <com.expedia.bookings.widget.TextView
                android:id="@+id/card_info_expiration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CheckoutWidgetSecondaryTextStyle" />

        </LinearLayout>

        <com.expedia.bookings.widget.ContactDetailsCompletenessStatusImageView
            android:id="@+id/card_info_status_icon"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/section_payment_options_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.expedia.bookings.widget.DisableableLinearLayout
            android:id="@+id/section_credit_card_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background"
            android:orientation="vertical">

            <com.expedia.bookings.widget.StoredCreditCardList
                android:id="@+id/stored_creditcard_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <include layout="@layout/widget_filled_in_card_details_mini_view" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/gray300" />

            <com.expedia.bookings.widget.TextView
                android:id="@+id/payment_option_credit_debit"
                style="@style/HotelPaymentOption"
                android:drawableLeft="@drawable/add_new_credit_card_icon_with_padding"
                android:text="@string/shortened_checkout_payment_option_credit_debit_label" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/gray300" />
        </com.expedia.bookings.widget.DisableableLinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/section_billing_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <com.expedia.bookings.section.SectionBillingInfo
            android:id="@+id/section_billing_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/display_credit_card_brand_icon_grey"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_generic_card" />

                <com.expedia.bookings.widget.NumberMaskEditText
                    android:id="@+id/edit_creditcard_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/credit_debit_card_hint"
                    android:nextFocusForward="@+id/edit_creditcard_exp_text_btn"
                    android:paddingLeft="48dp"
                    android:maxLines="1"
                    app:numberFormat="creditcard" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <com.expedia.bookings.widget.accessibility.AccessibleEditTextForSpinner
                    android:id="@+id/edit_creditcard_exp_text_btn"
                    style="@style/FakeSpinner.Light"
                    android:drawableRight="@drawable/material_dropdown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:bufferType="spannable"
                    android:hint="@string/expiration_date"
                    android:nextFocusForward="@+id/edit_address_postal_code"
                    android:textSize="18sp" />

                <com.expedia.bookings.section.SectionLocation
                    android:id="@+id/section_location_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="2">

                    <com.expedia.bookings.widget.accessibility.AccessibleEditText
                        android:id="@+id/edit_address_postal_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_postal_code_hint"
                        android:nextFocusForward="@+id/edit_name_on_card"
                        android:maxLines="1" />

                </com.expedia.bookings.section.SectionLocation>
            </LinearLayout>

            <TextView
                android:id="@+id/cardholder_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingLeft="4dp"
                android:text="@string/cardholder"
                android:textSize="@dimen/data_form_section_header_text"
                android:textStyle="bold" />

            <com.expedia.bookings.widget.accessibility.AccessibleEditText
                android:id="@+id/edit_name_on_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:hint="@string/name_on_card_hint"
                android:nextFocusForward="@id/edit_creditcard_number"
                android:inputType="textPersonName|textCapWords"
                android:maxLines="1" />

        </com.expedia.bookings.section.SectionBillingInfo>

        <LinearLayout
            android:id="@+id/invalid_payment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/checkout_screen_error_message_color"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray300" />

            <com.expedia.bookings.widget.TextView
                android:id="@+id/invalid_payment_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="8dp"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:textStyle="light" />

        </LinearLayout>

    </LinearLayout>

</com.expedia.bookings.widget.PaymentWidget>
