<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/spacer_above_filled_in_card_details_mini_view"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/gray300" />

    <LinearLayout
        android:id="@+id/filled_in_card_details_mini_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <com.expedia.bookings.widget.TextView
            android:id="@+id/filled_in_card_details_mini_view"
            style="@style/HotelStoredCards" />

        <com.expedia.bookings.widget.ContactDetailsCompletenessStatusImageView
            android:id="@+id/filled_in_card_status"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp" />
    </LinearLayout>
</LinearLayout>
