...
            android:id="@+id/error_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/error_action_button"
            style="@style/LXButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="20dp" />
...
