...
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/itin_white_text"
                    android:textSize="13sp" />

                <com.expedia.bookings.widget.TextView
                    android:id="@+id/itin_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/itin_white_text"
                    android:layout_marginTop="10dp"
                    android:textSize="13sp" />
...
